fix layout bugs

--- a/src/app/mini-card/mini-card.component.scss
+++ b/src/app/mini-card/mini-card.component.scss
@@ -20,7 +20,6 @@
 }
 
 .avatar-icon {
-    margin: 15px;
     transform: scale(2);
 }
 
@@ -38,6 +37,7 @@
 }
 
 .card-header {
+    align-items: center;
     justify-content: center;
 }
 
